--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,12 +7,23 @@ jobs:
   build-deploy:
     runs-on: self-hosted
     steps:
-    # - name: Checkout code
-    #   uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4  # Updated to v4, retry with this
+      continue-on-error: true  # Allow workflow to proceed if checkout fails
+    - name: Start Minikube
+      run: |
+        Write-Output "Starting Minikube..."
+        minikube start --driver=docker --force || Write-Output "Minikube start failed, attempting to recover..."
+        minikube status
+      shell: powershell
     - name: Set up Docker to use Minikube's environment
       run: |
         Write-Output "Configuring Docker to use Minikube's daemon..."
         & minikube -p minikube docker-env | Invoke-Expression
+        docker info --format '{{.ServerVersion}}'
+      shell: powershell
+    - name: Login to Docker Hub
+      run: echo "${{ secrets.DOCKER_USERNAME }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       shell: powershell
     - name: Build and Push Backend Image
       run: |
@@ -26,13 +37,11 @@ jobs:
         docker build -t ${{ secrets.DOCKER_USERNAME }}/project-frontend:latest .
         docker push ${{ secrets.DOCKER_USERNAME }}/project-frontend:latest
       shell: powershell
-    - name: Login to Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      shell: powershell
     - name: Deploy to Minikube
       run: |
         kubectl apply -f k8s/backend-deployment.yaml
         kubectl apply -f k8s/backend-service.yaml
         kubectl apply -f k8s/frontend-deployment.yaml
         kubectl apply -f k8s/frontend-service.yaml
+        kubectl get pods -n my-app -o wide
       shell: powershell
